--- a/src/assets/style/global-style.css
+++ b/src/assets/style/global-style.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Silkscreen&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&display=swap");
 
 html {
-  font-family: "Silkscreen", cursive;
+  font-family: "Chakra Petch", sans-serif;
   font-size: 18px;
 }
 
