--- a/src/assets/style/global-style.css
+++ b/src/assets/style/global-style.css
@@ -1,5 +1,11 @@
 @import url("https://fonts.googleapis.com/css2?family=Silkscreen&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Chakra+Petch:wght@300&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+
+.font-pl {
+  font-family: "Press Start 2P", cursive;
+  font-size: 0.7rem;
+}
 
 html {
   font-family: "Chakra Petch", sans-serif;
@@ -17,13 +23,18 @@ textarea:focus {
 }
 
 .preview-avatar-background {
+  z-index: -1;
   filter: blur(4px);
   opacity: 0.2;
-  position: absolute !important;
+  position: absolute;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
+}
+
+.h-0 {
+  height: 0 !important;
 }
 
 :root {
